--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node app.js"
+    "start": "node app.js"
   },
-  "engines":{
-    "node" : "12.14.1"
+  "engines": {
+    "node": "12.14.1"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +16,11 @@
   "dependencies": {
     "@hapi/joi": "^17.1.0",
     "bcrypt": "^3.0.8",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "full-icu": "^1.3.0",
+    "helmet": "^3.21.2",
     "lodash": "^4.17.15",
     "luxon": "^1.22.0",
     "moment": "^2.24.0",
