--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "full-icu": "^1.3.0",
     "helmet": "^3.21.2",
+    "joi-password-complexity": "^4.0.0",
     "lodash": "^4.17.15",
     "luxon": "^1.22.0",
     "mongoose": "^5.8.11"
