--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "full-icu": "^1.3.0",
     "helmet": "^3.21.2",
     "joi-password-complexity": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.8.11"
+    "mongoose": "^5.8.11",
+    "multer": "^1.4.2"
   }
 }
